--- a/index.html
+++ b/index.html
@@ -906,8 +906,9 @@
             .map(c => c.to)
             .filter(id => state.elements[id]?.type === 'screen');
           
-          // Build elements array: [events..., readModel, screens...]
-          elements = [...otherEvents, ...eventIds, readModelId, ...displayScreens];
+          // Build elements array: [readModel, events..., screens...]
+          // ReadModel at top, events below (what updates it), screen at end
+          elements = [readModelId, ...otherEvents, ...eventIds, ...displayScreens];
           
         } else if (sliceType === 'AU') {
           elements = [selectedElement.id, newElementId]; // event -> processor
