--- a/index.html
+++ b/index.html
@@ -110,6 +110,26 @@
     </div>
   </div>
 
+  <!-- Property Sheet -->
+  <div class="sheet-overlay" id="propertySheet">
+    <div class="sheet">
+      <div class="sheet-handle"></div>
+      <div class="sheet-title" id="propertySheetTitle">Add Property</div>
+      <input type="text" class="sheet-input" id="propertyNameInput" placeholder="e.g. orderId, amount, status">
+      <select class="sheet-input" id="propertyTypeSelect">
+        <option value="string">String</option>
+        <option value="number">Number</option>
+        <option value="boolean">Boolean</option>
+        <option value="date">Date</option>
+        <option value="guid">GUID</option>
+        <option value="array">Array</option>
+        <option value="object">Object</option>
+      </select>
+      <button class="sheet-btn" onclick="EventPad.saveProperty()">Save Property</button>
+      <button class="sheet-btn" id="deletePropertyBtn" onclick="EventPad.deleteProperty()" style="background: #c0392b; margin-top: 8px; display: none;">Delete Property</button>
+    </div>
+  </div>
+
   <!-- Name Slice Sheet -->
   <div class="sheet-overlay" id="sliceNameSheet">
     <div class="sheet">
