Add Element Menu - tap any element (in slice or loose) to edit
- New ElementMenuSheet with Rename, Properties, Connect, Delete options
- Slice elements are now tappable (cursor + hover states)
- Unified entry point for editing from anywhere
- EVENT_MODEL.md updated with SC: Edit Element

--- a/index.html
+++ b/index.html
@@ -110,6 +110,15 @@
     </div>
   </div>
 
+  <!-- Element Menu Sheet -->
+  <div class="sheet-overlay" id="elementMenuSheet">
+    <div class="sheet">
+      <div class="sheet-handle"></div>
+      <div class="sheet-title" id="elementMenuTitle">Element</div>
+      <div class="sheet-options" id="elementMenuOptions"></div>
+    </div>
+  </div>
+
   <!-- Property Sheet -->
   <div class="sheet-overlay" id="propertySheet">
     <div class="sheet">
