Fix: Add dynamic sheet support for scenarios
- Added dynamicSheet container to index.html
- Updated sheets.js to detect HTML content vs ID
- Added sheet-header, sheet-body, sheet-actions styles

--- a/index.html
+++ b/index.html
@@ -164,6 +164,11 @@
 
   <div class="toast" id="toast"></div>
 
+  <!-- Dynamic sheet container -->
+  <div class="sheet-overlay" id="dynamicSheet">
+    <div class="sheet" id="dynamicSheetContent"></div>
+  </div>
+
   <script type="module" src="src/main.js"></script>
 </body>
 </html>
